--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.2",
+    "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.17.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/react-grid-layout": "^1.3.5",
     "@types/styled-components": "^5.1.34",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.13",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
     "hoist-non-react-statics": "^3.3.2",
@@ -21,9 +25,12 @@
     "react-dom": "18.0.0",
     "react-grid-layout": "^1.4.4",
     "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.21.3",
+    "react-virtualized": "^9.22.5",
     "redux-thunk": "^3.1.0",
     "sass": "^1.69.6",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -70,8 +77,10 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.33",
+    "@types/react-resizable": "^3.0.8",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized": "^9.21.30",
     "@types/redux-logger": "^3.0.12",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
