--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -6,7 +6,9 @@ WORKDIR /frontend
 
 COPY ./frontend .
 
+RUN npm install --legacy-peer-deps
 RUN npm run build
+
 WORKDIR /frontend/build
 
 CMD ["npx","serve","-s"]
